feat: subfilter body

--- a/conf/main.conf
+++ b/conf/main.conf
@@ -1,12 +1,37 @@
 js_path "/etc/nginx/njs/";
 js_import main from main.js;
 
+map $enable_ssl $protocol {
+    "true" https;
+    "false" http;
+}
+
+map $upstream_enable_ssl $upstream_protocol {
+    "true" https;
+    "false" http;
+}
+
 server {
     listen 80;
 
+    location ~* /BF-[0-9]+$ {
+        resolver 8.8.8.8;
+        proxy_set_header Accept-Encoding "";
+        sub_filter $upstream_protocol://$upstream_domain $protocol://$domain;
+        sub_filter $upstream_protocol:\/\/$upstream_domain $protocol:\/\/$domain;
+        sub_filter_types 'application/javascript' 'text/css' 'text/html';
+        sub_filter_once off;
+        js_set $new_uri main.main;
+        proxy_pass $upstream_protocol://$upstream_domain$new_uri;
+    }
+
     location / {
         resolver 8.8.8.8;
-        js_set $new_uri main.main;
-        proxy_pass $upstream_domain$new_uri;
+        proxy_set_header Accept-Encoding "";
+        sub_filter $upstream_protocol://$upstream_domain $protocol://$domain;
+        sub_filter $upstream_protocol:\/\/$upstream_domain $protocol:\/\/$domain;
+        sub_filter_types 'application/javascript' 'text/css' 'text/html';
+        sub_filter_once off;
+        proxy_pass $upstream_protocol://$upstream_domain;
     }
 }
