feat: randomize id

--- a/conf/main.conf
+++ b/conf/main.conf
@@ -13,12 +13,13 @@ map $upstream_enable_ssl $upstream_protocol {
 
 server {
     listen 80;
+    resolver 8.8.8.8;
 
     location ~* /BF-[0-9]+$ {
-        resolver 8.8.8.8;
         proxy_set_header Accept-Encoding "";
         sub_filter $upstream_protocol://$upstream_domain $protocol://$domain;
         sub_filter $upstream_protocol:\/\/$upstream_domain $protocol:\/\/$domain;
+        sub_filter $upstream_domain $domain;
         sub_filter_types 'application/javascript' 'text/css' 'text/html';
         sub_filter_once off;
         js_set $new_uri main.main;
@@ -26,10 +27,10 @@ server {
     }
 
     location / {
-        resolver 8.8.8.8;
         proxy_set_header Accept-Encoding "";
         sub_filter $upstream_protocol://$upstream_domain $protocol://$domain;
         sub_filter $upstream_protocol:\/\/$upstream_domain $protocol:\/\/$domain;
+        sub_filter $upstream_domain $domain;
         sub_filter_types 'application/javascript' 'text/css' 'text/html';
         sub_filter_once off;
         proxy_pass $upstream_protocol://$upstream_domain;
