fix: fix path matching

--- a/conf/main.conf
+++ b/conf/main.conf
@@ -15,7 +15,7 @@ server {
     listen 80;
     resolver 8.8.8.8;
 
-    location ~* /BF-[0-9]+$ {
+    location ~* "/bf-[a-z0-9]{8}$" {
         proxy_set_header Accept-Encoding "";
         sub_filter $upstream_protocol://$upstream_domain $protocol://$domain;
         sub_filter $upstream_protocol:\/\/$upstream_domain $protocol:\/\/$domain;
